added our services section and responsive the section for small and medium diveces

--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
                 </div>
             </div>
         </section>
+        <!-- our services section start from here  -->
+        <section class="services-container space">
+            <div class="services-content">
+                <div class="service">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="service">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="service">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
+        <!-- hot deal section start from here  -->
+        <section class="hot-deal-container">
+            <div class="hot-deal-content">
+                
+            </div>
+        </section>
     </main>
     <footer>
 
