added hot deal section and responsive the section for small and medium diveces

--- a/index.html
+++ b/index.html
@@ -61,7 +61,20 @@
         </section>
         <!-- hot deal section start from here  -->
         <section class="hot-deal-container">
-            <div class="hot-deal-content">
+            <div class="hot-deal-content space">
+                <div class="deal-content">
+                    <h2 class="deal-title">Hot Deal ! Sale Up To 25% <span class="off-text">Off</span></h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="banner-btn">Sign Up</button>
+                </div>
+                <div class="deal-img">
+                    <img src="Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Instagram section start from here  -->
+        <section class="instagram-container space">
+            <div class="instagram-content">
                 
             </div>
         </section>
