--- a/index.html
+++ b/index.html
@@ -75,7 +75,22 @@
         <!-- Instagram section start from here  -->
         <section class="instagram-container space">
             <div class="instagram-content">
-                
+                <h2 class="instagram-content-title">Instagram</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="instagram-images">
+                <div class="instagram-image">
+                    <img src="Flower Asset/Flower 01.png" alt="">
+                </div>
+                <div class="instagram-image">
+                    <img src="Flower Asset/Rectangle 4.png" alt="">
+                </div>
+                <div class="instagram-image">
+                    <img src="Flower Asset/Rectangle 5.png" alt="">
+                </div>
+                <div class="instagram-image">
+                    <img src="Flower Asset/Rectangle 6.png" alt="">
+                </div>
             </div>
         </section>
     </main>
