added subscribe section and responsive the section for the small and medium devices

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
                 </div>
             </div>
         </section>
+        <!-- Subscribe section start from here  -->
+        <section class="subscribe-container space">
+            <div class="subscribe-content">
+                <h2 class="subscribe-content-title">Get The Latest Deals</h2>
+                <p>$30 coupon for first shopping</p>
+                <div class="subscribe">
+                    <input type="text" placeholder="Enter your email here...." >
+                    <button class="subscribe-btn">Subscribe</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
