--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
         </section>
     </main>
     <footer>
-
+        <!-- footer start  -->
+        <div class="footer-container space">
+            <h1><span class="flower-text">Flower</span>Shop</h1>
+            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content<br> of a page when looking at its layout.</p>
+            <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
     </footer>
 </body>
 </html>
